[package]
name = "rc-zip"
version = "5.3.2"
description = "An I/O-agnostic implementation of the zip file format"
repository = "https://github.com/fasterthanlime/rc-zip"
license = "Apache-2.0 OR MIT"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2021"
readme = "README.md"

keywords = ["zip", "unzip"]
categories = ["compression"]

[lib]
name = "rc_zip"
path = "src/lib.rs"

[dependencies]
winnow = "0.7.13"
oval = "2.0.0"
chrono = { version = "0.4.42", default-features = false }
encoding_rs = "0.8.35"
tracing = "0.1.41"
oem_cp = "2.1.0"
thiserror = "2.0.17"
chardetng = "0.1.17"
num_enum = "0.7.4"
crc32fast = "1.5.0"
miniz_oxide = { version = "0.8.9", optional = true }
deflate64 = { version = "0.1.10", optional = true }
bzip2 = { version = "0.6.0", optional = true }
lzma-rs = { version = "0.3.0", optional = true, features = ["stream"] }
zstd = { version = "0.13.3", optional = true }
ownable = "0.6.2"
temp-dir = { version = "0.1.16", optional = true }
tracing-subscriber = { version = "0.3.20", optional = true, features = [
    "env-filter",
] }

[features]
corpus = ["dep:temp-dir", "dep:bzip2", "dep:tracing-subscriber"]
deflate = ["dep:miniz_oxide"]
deflate64 = ["dep:deflate64"]
bzip2 = ["dep:bzip2"]
lzma = ["dep:lzma-rs"]
zstd = ["dep:zstd"]
tracing-subscriber = ["dep:tracing-subscriber"]
